--- a/templates/catagory.html
+++ b/templates/catagory.html
@@ -12,10 +12,10 @@
     <title>Newsbox - Modern Magazine &amp; Newspaper HTML Template</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/favicon.ico' %}">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css' %}">
 
 </head>
 
