--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -99,14 +99,18 @@
                                 <!-- Header Add Area -->
                                 <div class="header-add-area">
                                     {% if request.user.is_authenticated %}
-                                    <a href="{% url 'logout' %}">
-                                        <button type="button" class="btn btn-light">logout</button>
+                                    <a href="{% url 'create_news' %}">
+                                        <button type="button" class="btn btn-danger">Create News</button>
                                     </a>
+                                    <a href="{% url 'logout' %}">
+                                        <button type="button" class="btn btn-danger">logout</button>
+                                    </a>
+                                   
                                     {% else %}
                                     <a href="{% url 'login' %}">
                                         <button type="button" class="btn btn-danger">Login</button>
                                     </a>
-                                    <a href="{% static '#' %}">
+                                    <a href="{% url 'signup' %}">
                                         <button type="button" class="btn btn-danger">Signup</button>
                                     </a>
                                     {% endif %}
